--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
