:construction: transitioning to tailwind css

--- a/frontend/src/app/navbar/navbar.component.css
+++ b/frontend/src/app/navbar/navbar.component.css
@@ -47,19 +47,16 @@ a {
   font-weight: 800;
   line-height: 18px;
   color: inherit;
-}
-
-a:hover {
-  color: inherit;
-  text-decoration: underline;
-  text-underline-offset: 3px;
+  text-decoration: none;
 }
 
 a:active,
 a:visited,
-a:link {
+a:link,
+a:hover {
   color: inherit;
 }
+
 span {
   font-size: 1.5rem;
 }
