--- a/frontend/src/app/theme-button/theme-button.component.html
+++ b/frontend/src/app/theme-button/theme-button.component.html
@@ -1,8 +1,8 @@
 <button aria-label="Toggle Dark Mode"
-  class="w-10 h-10 text-zinc-700 bg-gray-200 dark:bg-orange-200 hover:bg-gray-300 dark:hover:bg-orange-300 rounded-lg flex items-center justify-center  hover:ring-2 ring-gray-300  transition-all">
+  class="w-10 h-10 text-gray-700 bg-gray-200 dark:bg-yellow-400 hover:bg-gray-300 dark:hover:bg-yellow-500 rounded-lg flex items-center justify-center  hover:ring-2 ring-gray-300  transition-all cursor-pointer">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
     class="w-5 h-5 hidden dark:block">
-    <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2}
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
       d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
   </svg>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-4 h-4 block dark:hidden">
