--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,19 +1,18 @@
-<div class="inline-flex justify-center sticky top-0 w-full z-50">
-  <nav ngClass="bg-blue-200 dark:bg-gray-900 inline-flex w-full px-2">
-      <div class="me-auto inline-flex w-full px-4">
-        <a class="navbar-brand brand inline-flex items-center" routerLink="/">
-          <img class="img-fluid logo" />
-          <div class="mx-2 h-24 w-4"></div>
-          <span class="hidden md:flex">Sustainable Development | Goal 14</span>
-          <span class="md:hidden flex">SDG 14</span>
-        </a>
-        <div class="flex flex-1"></div>
-        <a class="inline-flex items-center mx-2" routerLink="/" fragment="home-landing">Home</a>
-        <a class="inline-flex items-center mx-2" routerLink="/about" fragment="about-landing" style="width: 68px">About
-          Us</a>
-        <app-theme-button class="inline-flex items-center"></app-theme-button>
-      </div>
-      <!--
+<nav class="inline-flex justify-center sticky top-0 w-full z-50 bg-blue-200 dark:bg-gray-900 inline-flex w-full px-2">
+  <div class="me-auto inline-flex w-full px-4">
+    <a class="navbar-brand brand inline-flex text-black dark:text-white items-center" routerLink="/">
+      <img class="logo" />
+      <div class="mx-2 h-24 w-4"></div>
+      <span class="hidden md:flex">Sustainable Development | Goal 14</span>
+      <span class="md:hidden flex">SDG 14</span>
+    </a>
+    <div class="flex flex-1"></div>
+    <a class="inline-flex items-center mx-2" routerLink="/" fragment="home-landing">Home</a>
+    <a class="inline-flex items-center mx-2" routerLink="/about" fragment="about-landing" style="width: 68px">About
+      Us</a>
+    <app-theme-button class="inline-flex items-center"></app-theme-button>
+  </div>
+  <!--
       <div class="dropdown-menu">
         <a class="dropdown-item" routerLink="/sea-water-ph">Acidification</a>
         <a class="dropdown-item" routerLink="/eutrophication">Eutrophication</a>
@@ -24,5 +23,4 @@
         <a class="dropdown-item" routerLink="/resources">Resources</a>
       </div>
 -->
-  </nav>
-</div>
+</nav>
