:sparkles: navbar + tailwindcss

--- a/angular-client/src/app/app.component.html
+++ b/angular-client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main  class="text-black dark:text-white">
+<main class="text-black dark:text-white w-full">
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </main>
