--- a/angular-client/src/app/beach-litter/beach-litter-chart/beach-litter-chart.component.html
+++ b/angular-client/src/app/beach-litter/beach-litter-chart/beach-litter-chart.component.html
@@ -1,1 +1,11 @@
-<p>beach-litter-chart works!</p>
+<div *ngFor="let chart of chartDataArray">
+    <div class="py-1">
+        <google-chart [title]="chart.title" [type]="chart.type" [data]="chart.data" [columns]="chart.columns"
+            [options]="chart.options">
+        </google-chart>
+    </div>
+    <div class="custom-ngx-slider mx-auto">
+        <ngx-slider [(value)]="sliderValue" [options]="sliderOptions" (valueChange)="cambiaAnno({sliderValue})">
+        </ngx-slider>
+    </div>
+</div>
