--- a/angular-client/src/app/beach-litter/beach-litter.component.html
+++ b/angular-client/src/app/beach-litter/beach-litter.component.html
@@ -1,3 +1,3 @@
-<div class="d-flex justify-content-center">
+<div class="flex justify-center">
   <app-beach-litter-chart></app-beach-litter-chart>
 </div>
